--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,12 @@ pipeline: supervised_embeddings
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
-  - name: MemoizationPolicy
-  - name: KerasPolicy
-  - name: MappingPolicy
+- name: MemoizationPolicy
+- name: KerasPolicy
+- name: MappingPolicy
+- name: TwoStageFallbackPolicy
+  nlu_threshold: 0.3
+  core_threshold: 0.3
+  fallback_core_action_name: "action_default_fallback"
+  fallback_nlu_action_name: "action_default_fallback"
+  deny_suggestion_intent_name: "out_of_scope"
